[package]
name = "ndarray-to-img"
version = "0.0.1-alpha"
readme = "README.md"
authors = ["Njagi Mwaniki <njagi+bio@njagi.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "double_input"
crate-type = ["dylib"]

[dependencies]
ndarray = "^0.15.4"
image = "^0.23.14"
num = "^0.4.0"
libc = "0.2"