[package]
name = "ndarray-to-img"
version = "0.0.1-alpha"
readme = "README.md"
authors = ["Njagi Mwaniki <njagi+bio@njagi.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ndarray_to_img"
crate-type = ["dylib"]

[dependencies]
libc = "0.2"
num = "^0.4.0"
image = "^0.23.14"
ndarray = "^0.15.4"